Design and implementation - model part almost finished

--- a/blockchainframeworks.tex
+++ b/blockchainframeworks.tex
@@ -230,6 +230,10 @@ It features a nice and intuitive graphical user interface to manage all of its c
 
 \subsection{Business Network}
 
+\todo:{pedro: compor um pouco do state of the art do composer com mais informacao sobre exatamente o que é uma business network, que é um modelo que pode ser deployed quantas vezes se quiser, mas cada deployment num conjunto de nós diferente é basicamente um ledger diferente. Explicar que o mesmo design de uma business network pode ter a sua topologia e permissões modificadas para adaptar a outra supply chain, um grande beneficio desta ferramenta. Explain that a deployed business network is a ledger that works for a group of companies that wants to form a blockchain for their own supply chain; }
+
+%Paragraph 1 - STATE OF THE ART- explain what a business network is - that it can be deployed as many times as one ones, for a certain number of nodes, and then people with identities can join that network and interact with it. It is therefore, the source of truth underlying the supply chain. The business network is divided into 2 important parts, which need to be designed separately.
+
 A business network is a model of all the data in the blockchain, which includes all the objects, functions, transactions and identities that will connect to each other and be saved on the ledger. It is basically an abstraction of the chaincode that will be installed onto Fabric.
 
 Composer features a custom modeling language which makes it easier to define a business network. It is divided into 4 main components, as can be seen in figure \ref{fig:composer_abstraction}.
