--- a/prototype.tex
+++ b/prototype.tex
@@ -9,5 +9,6 @@
 \input{prototype/prototype4.tex}
 \input{prototype/prototypeconclusion.tex}
 
+\todo{pedro:change title}
 %TODO: somewhere in the 1st or 2nd sections, or even here, talk about the survey timeline and how it affected the choice of framework and requirements
 
