--- a/prototype/prototype1.tex
+++ b/prototype/prototype1.tex
@@ -43,7 +43,7 @@ This information is summarized in table \ref{table-framework-requirements}.
 	
 	%%%%%%%%%% TABLE END %%%%%%%%%%%%%%%%
 
-\subsection{Framework Choice - Requirements}
+\subsection{Framework Choice}
 
 So, what conclusions can be taken from these framework requirements? Firstly, \textbf{a private blockchain framework seems more adequate}, because of all the security control mechanisms that are needed. Secondly, \textbf{the framework should allow for highly customizable networks, including not only asset management, but also identity management}, where the participants of the blockchain can be given specific permissions. Lastly, the framework needs to \textbf{allow the use of APIs}.
 
