--- a/prototype/prototype3.tex
+++ b/prototype/prototype3.tex
@@ -82,24 +82,76 @@ All the creation, deletion and update transactions are already supported by defa
 The transactions that were modeled for this network, with all their parameters can be seen in Figure X, from the annexes, and their code is in Y. What follows is a list of these transactions with their descriptions:
 \begin{itemize}
     \item \textbf{CreateShipmentAndContract} - creates a shipment and the associated contract at the same time, for a certain set of parameters, which includes a buyer, seller, the commodities to include in the shipment, etc.
-    \item \textbf{UpdateShipment} - update a shipment's tracking status, location and optionally pass it over to a new holder. In case the shipment is being delivered to the buyer, if a payment was established in the contract, it is automatically done. 
+    \item \textbf{UpdateShipment} - update a shipment's tracking status, location and optionally pass it over to a new holder. In case the shipment is being delivered to the buyer, if a payment was established in the contract, it is automatically done. \textbf{Emits a "possible fraud" event when a shipment does not arrive on the expected location, and a normal event warning that the shipment was updated as well}.
     \item \textbf{UpdateCommodity} - A custom transaction to update a commodity, instead of using the default one. The reason is to make access control rules easier for this behaviour easier.
     \item \textbf{DeleteCommodity} - Again, a custom transaction, to delete a commodity. The reason for this transaction being custom is that a verification must be done to check if the commodity is part of a shipment before deleting it. In case it is, to maintain the integrity of the system, the commodity is not deleted
     \item \textbf{ReportDamagedGood} - Sometimes, goods are damaged during their shipment. This transaction updates the current status of a commodity and a description of the occurrence, so that a registry for any damages occurred can be
-    \item \textbf{TransformCommodities} - This transaction converts 1 or more commodities in a different set of commodities, by deleting the old ones and creating new ones. It is useful, for instance, when creating a product out of raw materials. 
-    \item \textbf{TransferCommodityPossession} - transfer the ownership of a commodity to a different participant of the network, but only if the commodity is not currently part of any shipment.
+    \item \textbf{TransformCommodities} - This transaction converts 1 or more commodities in a different set of commodities, by deleting the old ones and creating new ones. It is useful, for instance, when creating a product out of raw materials. \textbf{Emits an event warning that the products were transformed}.
+    \item \textbf{TransferCommodityPossession} - transfer the ownership of a commodity to a different participant of the network, but only if the commodity is not currently part of any shipment. \textbf{Emits an event warning about the change of ownership}.
     \item \textbf{TemperatureReading} - Finally, and to ensure full product condition traceability, temperature readings can be inserted into the system. A shipment can log an array of temperature readings, and each time this transaction is called for a shipment, a reading can be inserted into the array.
 \end{itemize}
 
 %\item Tutorial/Show-off the functionalities of some kind? Include this on the 1st point?
 \subsubsection*{Queries}
-The transactions are used to model actions and behaviour, but to retrieve some of the information, something else is needed, and these are queries. Hyperledger Fabric uses a relational database to store the asset and participant registries and Composer features a way to retrieve the data easily, through filtered queries (using a javascript framework, LoopBack).
+The transactions are used to model actions and behaviour, but to retrieve some of the information, something else is needed. \textbf{Composer already retrieves the basic information for participants, assets and transactions, but anything else requires queries}. Hyperledger Fabric uses a relational database to store the asset and participant registries and Composer features a way to retrieve that data easily, through filtered queries (using a javascript framework, LoopBack).
+
+In this proof-of-concept, some queries were programmed for some of the most important pieces of information that can ensure traceability and other properties:
+
+%%%%%%%% TABLE BEGIN %%%%%%%%%%%%%%%
+
+\begin{table}[]
+    \centering
+    \begin{tabular}{|l|l|l|l|}
+    \hline
+    \textbf{ID} & \textbf{Name}                   & \textbf{Retrieve}   & \textbf{Parameters} \\ \hline
+    1           & selectShipmentByID              & ShipmentBatch       & Shipment ID         \\ \hline
+    2           & selectShipmentByOwner           & ShipmentBatch{[}{]} & Shipment Owner      \\ \hline
+    3           & selectShipmentByHolder          & ShipmentBatch{[}{]} & Shipment Holder     \\ \hline
+    4           & selectShipmentByCountry         & ShipmentBatch{[}{]} & Location Country    \\ \hline
+    5           & selectShipmentByTrackingcode    & ShipmentBatch       & Tracking Number     \\ \hline
+    6           & getHistorianRecords             & Transaction{[}{]}   & None                \\ \hline
+    7           & getHistorianByPerson            & Transaction{[}{]}   & Participant         \\ \hline
+    8           & getHistorianByType              & Transaction{[}{]}   & Transaction Type    \\ \hline
+    9           & getDamagedGoodsTransaction      & Transaction{[}{]}   & None                \\ \hline
+    10          & getCreatedShipmentsTransactions & Transaction{[}{]}   & None                \\ \hline
+    11          & getCommoditiesTransformations   & Transaction{[}{]}   & None                \\ \hline
+    12          & getCommodityOwner               & Commodity           & GTIN                \\ \hline
+    13          & getShipmentWhereCommodityExists & ShipmentBatch       & Commodity           \\ \hline
+    \end{tabular}
+    \caption{My caption}
+    \label{my-label}
+    \end{table}
+
+%%%%%%%% TABLE END %%%%%%%%%%%%%%%%%
+
+These queries are pretty straight forward to code. They are a basic SELECT type of query, with the specification of what object we want to select, followed by a WHERE kind of statement, where certain conditions like equality, inequality, \textit{"CONTAINS"} among a few others can be used. 
+
+For instance, query number 12, \textit{getCommodityOwner}, takes as parameter the Commodity's ID (GTIN), but instead of retrieving the owner of the commodity, a participant, it returns the Commodity itself. Why? Because the commodity retrieved has all the information of who the owner is. This information has to be extracted manually since it is \textbf{impossible} to make a query to select only that attribute.
+
+\subsubsection*{Query Difficulties}
+
+Though the ease of coding the queries is appreciated, they are pretty limited in what they can do. For instance, it is impossible to natively nest a \textit{"SELECT"} inside another. Since the database behind is not relational, there are also no powerful query elements like \textit{"JOIN"}, which makes for getting some pieces of information very hard or even impossible. 
+
+To make up for this, some changes in the model had to be made. Originally, the \textit{Commodity} asset did not have a \textit{Owner} data attribute, since it was not thought to be needed. A \textit{ShipmentBatch} has a \textit{Owner}, and a list of \textit{Commodities}. Therefore, if a relational database were used, by providing the ID of a \textit{Commodity} as parameter, it would be possible to retrieve the \textit{Owner}, simply by joining the tables for the shipment, participant and commodity using the given ID, and it would return the owner. In a relational database, any relation points both ways, so it is easy to navigate between the classes of a model, but that does not happen here.
+
+
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[scale=0.40]{media/relational_problem.png}
+    \caption[Examplification of the non-relational model problem in the Hyperledger Projects.]{Examplification of the non-relational model problem in the Hyperledger Projects.}
+    \label{fig:relational_problem}
+\end{figure}
+Figure \ref{fig:relational_problem} illustrates the problem anc changes to the developed model that had to be made to adapt to it. The \textit{Commodity} was adapted to have a \textit{Owner} data attribute so that it is easier to query the owner of a commodity. This pretty simple query would be a lot harder to accomplish in Composer, and anything more complex or having more tables than this would be pretty much impossible to do without exporting all the data to another system that could organize it and query it in a different way. 
+
+Another problem that this can bring, other than having the trouble of changing the model, is the integrity issues that can be caused in the data. Anytime that the owner of a shipment is changed, the owner of the commodity also has to be changed in the code. If the owner of a commodity was not changed in the code, then it would be inconsistent with the owner of the shipment, who in reality should also own the commodity. \textbf{If a programmer consistently adds attributes to classes to make up for the weak Composer queries, eventually they might forget to make a change similar to this one and the system might lose integrity}.
+
 
 \subsection{Composer Business Network - Identity Management and Access Control}
 
+Creating a model design for the network with all the previously explained items grants the needed basic functionalities for the system to work, but it misses one of the most important aspects from the requirements: \textbf{the security and access control}.
 %Identity management - Creating identities, associating them to the participants, etc. (MAYBE THIS IS BETTER OFF IN THE BACKGROUND/STATE OF THE ART SECTION ABOUT COMPOSER)
 
- % talk about lack of control for multisig? important for when 2 ppl should approve a transaction between them
 
 Permissions - Access control rules:
 \begin{itemize}
@@ -152,6 +204,8 @@ Permissions - Access control rules:
             \end{itemize}
         \end{itemize}
 \end{itemize}	
+
+ % talk about lack of control for multisig? important for when 2 ppl should approve a transaction between them
 
 
 \subsection{Network Topology and Deployment}
