Identity Management design finished; Conclusions started, including future work

--- a/blockchainframeworks.tex
+++ b/blockchainframeworks.tex
@@ -223,7 +223,7 @@ Compared to other blockchains, this consensus mechanism has some advantages, tho
 In brief conclusion, Hyperledger allows for a permissioned blockchain which sacrifices some decentralization for scalability and performance. By using a different consensus mechanism, most of the issues of public blockchains vanish. Furthermore, data access must be authorized, such that sensitive data in a channel is protected, one of the requirements for data in supply chains. Thus, Hyperledger Fabric's features are adequate for SCM's requirements in a way that is difficult to achieve in public blockchains.
 
 \section{Hyperledger Composer}
-
+\label{sec:composer-background}
 Hyperledger Composer is another tool which works together with Fabric to allow for an easier approach to modeling a blockchain network. It is actually a higher level abstraction of Fabric, which allows for a big reduction in the lines of code written and simplifies the whole process of building a business network and deploying it, as well as the process of managing the identities of the network's participants. 
 
 It features a nice and intuitive graphical user interface to manage all of its components, and it also features a REST server to expose the blockchain to outside applications.
