--- a/conclusions.tex
+++ b/conclusions.tex
@@ -17,6 +17,18 @@ The dissertation focuses on finding out how applicable Blockchain is to the supp
 
 \section{Future Work}
 
+Future work: The work here done was much more introductory in nature, and explored the requirements and their satisfaction as a whole. Additionaly, the maturity of the tools used was questionable. 
+Future work might include:
+\begin{itemize}
+	\item Taking specific requirements from the most important requirements on the list and research on using blockchain to successfully apply them as enhancements:
+	\begin{itemize}
+		\item Financial applications, payments and contractual agreements;
+		\item "Applying Blockchain as a financial alternative in the Supply Chain" could even be a new thesis derived out of this one;
+	\end{itemize}
+	\item Research and attempt to use different frameworks to fulfill the same requirements that were elicited in this dissertation;
+    \item Research on different architectures
+\end{itemize} 
+
 %Nao usar situaçoes hipoteticas
 %USAR OUTRAS FERRAMENTAS
 %COMPARAR COM CLOUD E OUTRAS ARQUITETURAS
