--- a/prototype/prototype4.tex
+++ b/prototype/prototype4.tex
@@ -7,6 +7,15 @@
 	\item After all of these use cases, conclusions about how many were or were not possible, and what does that tell us about the functionalities that the survey concluded were essential: does the prototype feasibly implement them?
 \end{itemize}
 
+%The chosen framework had the possibility of satisfying the most requirements, out of all the frameworks.
+%Even so, it was concluded that it could only fill the requirements partially, with some important requirements not being fully achievable at the present moment
+
+%Conclusions: If we define that Blockchain being a good architecture for SC means satisfying all the requirements, then it is not a good architecture to replace the current ones in supply chain.
+
+%However, this does not mean Blockchain is not useful, since it can still partially fill some important requirements. \textbf{The fact that by itself, it is not good enough to replace other current architectural designs in supply chain does not mean it cannot work together with the current architectures} to fill in some gaps. Blockchain can still be applied as an aid and enhancement to some information system functionalities. For instance, financial transactions was a requirement that was fulfilled and listed very high on the requirements from the survey. No other present architecture uses this functionality, but through Blockchain, it can be implemented.
+
+
+
 \todo{fcorreia: incluir requisitos funcionais e não funcionais}
 
 \subsection{Limitations}
